Enforce more string properties in Java
This switches to using varchar in the database with an unreasonably
large size limit, and enforces more properties in the constructors
of various types.

Affects: https://github.com/io7m/eigion/issues/9